# the_spirit_of_progress

./: Cargo.toml  README.md
assets/: button-test.psd  colour palette.psd  ui-mockups.psd
assets/gun_parts/small_arms/: components.toml  positioning.toml
src/: camera.rs  city.rs  connection.rs  lib.rs  main.rs  map.rs
src/components/: city.rs  connection.rs  mod.rs
src/components/production/: mod.rs  recipes.rs
src/components/world/: floodfill.rs  latlon.rs  mod.rs  render.rs  resources.rs  tectonics.rs  utils.rs
src/components/world/height/: mod.rs
src/components/world/latlon/: mod.rs  utils.rs
src/components/world/render/: events.rs  helpers.rs  mod.rs  plugin.rs  resources.rs
src/components/world/tectonics/: height.rs  mod.rs  plates.rs  plugin.rs  point.rs  render_modes.rs  utils.rs
src/components/world/tectonics/plate/: mod.rs  plate_boundary.rs  plate_movement.rs
src/components/world/tectonics/utils/: iterators.rs
src/components/world/utils/: iterators.rs
src/game/: mod.rs
src/game/weapons/: component.rs  mod.rs
src/game/weapons/components/: mod.rs
src/game/weapons/small_arms/: mod.rs
src/game/world/: mod.rs
src/game/world/collections/: cell.rs  iterator.rs  mod.rs
src/game/world/elevation/: mod.rs
src/game/world/tectonics/: mod.rs
src/render/: draw.rs  extract.rs  mod.rs  prepare.rs  queue.rs  traits.rs  utils.rs
src/render/pipeline/: mod.rs
src/render/pipeline/bind_groups/: mod.rs  transform.rs  view.rs
src/render/shader/: mod.rs  orthographic_hexagon_fragment.wgsl  orthographic_hexagon_vertex.wgsl
src/scripts/: debug_hex.py
src/ui/: fonts.rs  interaction.rs  mod.rs  theme.rs  utils.rs
src/ui/components/: city_info.rs  mod.rs
src/ui/primitives/: center_box.rs  header.rs  mod.rs  root.rs  sidebar.rs  ui_box.rs
src/ui/screens/: mod.rs  weapon_design.rs
src/ui/screens/weapon_design/: costs_panel.rs  selector_sidebar.rs  stats_sidebar.rs  weapon_window.rs
src/ui/utils/: mod.rs  style_builder.rs
src/utils/: colours.rs  mod.rs  rendering.rs
