[package]
name = "vads"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/components/world/mod.rs"
name = "world_sim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
bevy_prototype_lyon = "0.5.0"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3