[package]
name = "vads"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "vads"
crate-type = ["lib"]

[[bin]]
path = "src/bin/world_sim.rs"
name = "world_sim"

[[bin]]
path = "src/bin/vads.rs"
name = "vads_game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
bevy_prototype_lyon = "0.6.0"
bevy_ecs_tilemap = "0.7.0"
rand = "0.8.5"
geoutils = "0.5.1"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3